# FileOrganizer

./: .gitignore  FileOrganizer.cpp  FileOrganizer.cpp.bak  FileOrganizer.filters  FileOrganizer.sln  FileOrganizer.sln.bak  FileOrganizer.vcxproj  FileOrganizer.vcxproj.bak.bak  OpenFileOrganizer.cpp  OpenFileOrganizer.h  OpenFileOrganizer.qrc  OpenFileOrganizer.sln  OpenFileOrganizer.ui  OpenFileOrganizer.ui.bak  OpenFileOrganizer.vcxproj  OpenFileOrganizer.vcxproj.bak  OpenFileOrganizer.vcxproj.bak2  OpenFileOrganizer.vcxproj.filters  README.md  ignore.db  main.cpp
libs/: unistd.h
libs/ImageMagick-7.1.0-48-src/: configure
libs/ImageMagick-7.1.0-48-src/ImageMagick-7.1.0-Q8-dll_and_static/: NOTICE.txt  configure.xml
libs/ImageMagick-7.1.0-48-src/ImageMagick-7.1.0-Q8-dll_and_static/lib/: CORE_RL_Magick++_.lib
libs/ImageMagick-7.1.0-48-src/MagickCore/: magick-baseconfig.h  version.h  version.h.in
libs/ImageMagick-7.1.0-48-src/PerlMagick/: Makefile.PL
libs/ImageMagick-7.1.0-48-src/PerlMagick/default/: Magick.pm  Makefile.PL
libs/ImageMagick-7.1.0-48-src/PerlMagick/quantum/: Makefile.PL  quantum.xs
libs/ImageMagick-7.1.0-48-src/config/: configure.xml.in
libs/ImageMagick-7.1.0-48-src/utilities/: ImageMagick.1  conjure.1  montage.1
libs/MediaInfoLib-master/: .gitignore
libs/MediaInfoLib-master/.github/workflows/: MediaInfoLib_Checks.yml
libs/MediaInfoLib-master/Project/BCB/: MediaInfoLib_Proj.groupproj
libs/MediaInfoLib-master/Project/CMake/: CMakeLists.txt
libs/MediaInfoLib-master/Project/Coverity/: coverity.bat
libs/MediaInfoLib-master/Project/Java/: ReadMe.txt
libs/MediaInfoLib-master/Project/JavaScript/: ReadMe.txt
libs/MediaInfoLib-master/Project/MSVB2010/: MediaInfoLib_MSVB.sln
libs/MediaInfoLib-master/Project/MSVC2022/: MediaInfoLib.sln  MediaInfoLib_UWP.sln
libs/MediaInfoLib-master/Project/NetBeans/: ReadMe.txt
libs/MediaInfoLib-master/Project/PureBasic/: HowToUse_Dll.pb  MediaInfoDLL.pb
libs/MediaInfoLib-master/Source/Install/: MediaInfo_DLL_Windows_i386.nsi  MediaInfo_DLL_Windows_x64.nsi
libs/MediaInfoLib-master/Source/MediaInfo/: File__Analyze.cpp  File__Analyze.h  File__Analyze_MinimizeSize.h  File__Analyze_Streams.cpp  File__Analyze_Streams_Finish.cpp  MediaInfoList_Internal.cpp  MediaInfo_Config.cpp  MediaInfo_Config.h  MediaInfo_Config_MediaInfo.cpp  MediaInfo_Config_MediaInfo.h  MediaInfo_File.cpp  MediaInfo_Inform.cpp  MediaInfo_Internal.cpp  MediaInfo_Internal.h  Setup.h
libs/MediaInfoLib-master/Source/MediaInfoDLL/: MediaInfoDLL.cpp
libs/TinyEXIF-master/: TinyEXIF.cpp
libs/_imagehash/hashingImage-master/: Makefile.config
libs/_imagehash/image-hash-main/: .gitignore  LICENSE  README.md  db.h  imghash.h  mvptable.cpp  png.cpp  vcpkg.json
libs/_imagehash/libimghash-master/: .gitignore  CMakeLists.txt
libs/_imagehash/libimghash-master/debian/: changelog  copyright  shlibs.local.ex
libs/_imagehash/libimghash-master/examples/: delta.cpp  singlefile.cpp
libs/_imagehash/libimghash-master/include/: hash.h  imghash_c.h  source.h
libs/_imagehash/libimghash-master/lib/: hasher.cpp  imghash_c.cpp  simplehasher.cpp
libs/_imagehash/libimghash-master/tests/: compression_test.cpp  test.h
libs/_xattrs_ads/RenStrm-master/: README.md  RenStrm.cpp  RenStrm.h
libs/_xattrs_ads/ads-master/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ads.cpp  ads.hpp  ads_test.cpp
libs/_xattrs_ads/lsads-master/: .hgignore  AlternateDataStreams.hpp  exeversion.h  exeversion.rc  lsads.cpp  lsads.h  lsads.vs15.sln  lsads.vs15.vcxproj  lsads.vs15.vcxproj.filters  lsads.vs8.sln  lsads.vs8.vcproj  premake4.lua  setvcvars.cmd
libs/_xattrs_ads/xattrs-master/man/: has_xattrs.Rd
libs/dhash-master/: .gitignore  README.md  meson.build
libs/dhash-master/src/: main.cc
libs/fstlib-develop/lib/fsttable/: fsttable.cpp
libs/image-hash-main/: CMakeLists.txt  db.cpp  imghash.cpp  jpeg.cpp  main.cpp  mvptable.h
libs/imageinfo-master/: imageinfo.hpp
libs/libexif-0.6.24/: CMakeLists.txt  config.h  config.h.bak  config_cmake.h  config_cmake.h.bak  libexif.pc.cmake
libs/libexif-0.6.24/libexif/: exif-data.c  exif-entry.c  exif-format.c  exif-loader.c  exif-tag.c
libs/libexif-0.6.24/libexif/apple/: mnote-apple-tag.c
libs/libexif-0.6.24/libexif/canon/: exif-mnote-data-canon.c  mnote-canon-tag.c
libs/libexif-0.6.24/libexif/fuji/: exif-mnote-data-fuji.c  mnote-fuji-tag.c
libs/libexif-0.6.24/libexif/olympus/: exif-mnote-data-olympus.c  mnote-olympus-tag.c
libs/libexif-0.6.24/libexif/pentax/: exif-mnote-data-pentax.c  mnote-pentax-tag.c
libs/libimghash-master/: README.md
libs/libimghash-master/debian/: control
libs/libimghash-master/examples/: benchmark.cpp
libs/libimghash-master/gentoo/: libimghash-9999.ebuild
libs/libimghash-master/include/: hasher.h  simplehasher.h
libs/libimghash-master/lib/: hash.cpp  source.cpp
libs/libimghash-master/tests/: resize_test.cpp  test.cpp
libs/libjpeg-turbo-2.1.4-src/: jconfig.h  jmorecfg.h  jpeglib.h
libs/libvips-8.13.2/: meson.build
libs/libvips-8.13.2/cplusplus/: meson.build
libs/libvips-8.13.2/libvips/: meson.build
libs/libvips-8.13.2/libvips/foreign/: dbh.h
libs/libvips-8.13.2/subprojects/: expat.wrap  glib-2.0.wrap  pcre2.wrap  zlib.wrap
libs/libvips-8.13.2/subprojects/packagecache/: tmpziiymnsq
libs/libvips-8.13.2/vips-dev-w64-all-8.13.2/vips-dev-8.13/: versions.json
libs/mm_file-1.0.0/include/mm_file/: mm_file.hpp
libs/sqlite-amalgamation-3440200/sqlite-doc-3440200/: 34to35.html  35to36.html  about.html  aff_short.html  affcase1.html  amalgamation.html  appfileformat.html  appfunc.html  arch.html  assert.html  asyncvfs.html  atomiccommit.html  autoinc.html  backup.html  bindptr.html  books.html  bytecodevtab.html  c_interface.html  capi3.html  capi3ref.html  carray.html  changes.html  chronology.html  cintro.html  cksumvfs.html  cli.html  codeofconduct.html  codeofethics.html  compile.html  completion.html  conflict.html  consortium.html  consortium_agreement-20071201.html  copyright.html  cpu.html  crew.html  csv.html  custombuild.html  cves.html  datatype3.html  (+173 more)
(+7557 files in other folders)
